--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "@mui/material": "^5.14.0",
     "@tanstack/react-query": "^4.29.15",
     "@tanstack/react-query-devtools": "^4.29.15",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
