--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "armada-dashboard",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "license": "MIT",
+  "description": "Armada Dashboard",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
